--- a/src/app/components/pages/registration/registration.component.html
+++ b/src/app/components/pages/registration/registration.component.html
@@ -1,3 +1,24 @@
-<p>
-  registration works!
-</p>
+<div class="container">
+  <div class="columns is-centered">
+    <div class="column is-half">
+      <mat-card>
+        <mat-card-title>Registration</mat-card-title>
+        <mat-card-content>
+          <form [formGroup]="registrationForm">
+            <mat-form-field>
+              <input matInput placeholder="Name" formControlName="name">
+            </mat-form-field>
+            <mat-form-field>
+              <input matInput placeholder="Last name" formControlName="lastName">
+            </mat-form-field>
+            <mat-form-field>
+              <input matInput placeholder="Email" formControlName="email">
+            </mat-form-field>
+
+            <button mat-raised-button [disabled]="!registrationForm.valid">Submit</button>
+          </form>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+</div>
