--- a/src/app/components/pages/homepage/homepage.component.html
+++ b/src/app/components/pages/homepage/homepage.component.html
@@ -1,3 +1,13 @@
-<p>
-  homepage works!
-</p>
+<div class="homepage">
+  <div class="container">
+    <div class="columns is-centered">
+      <div class="column is-half">
+        <div class="columns is-multiline">
+          <div class="column is-one-third" *ngFor="let user of users$">
+            <app-partecipant [user]="user"></app-partecipant>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
