theming + order by

--- a/src/app/components/pages/registration/registration.component.html
+++ b/src/app/components/pages/registration/registration.component.html
@@ -15,7 +15,7 @@
               <input matInput placeholder="Email" formControlName="email">
             </mat-form-field>
 
-            <button mat-raised-button [disabled]="!registrationForm.valid" (click)="sendForm()">Submit</button>
+            <button mat-raised-button color="primary" [disabled]="!registrationForm.valid" (click)="sendForm()">Submit</button>
           </form>
         </mat-card-content>
       </mat-card>
