--- a/src/app/components/shared/partecipant/partecipant.component.html
+++ b/src/app/components/shared/partecipant/partecipant.component.html
@@ -1,4 +1,5 @@
-<mat-card>
-    {{user.name}}
-    {{user.lastName}}
+<mat-card [ngClass]="{'winner': user.winner, 'loser': !user.winner}">
+    {{user.name | titlecase}}
+    {{user.lastName | titlecase}}
+    <span></span>
 </mat-card>
