--- a/src/app/components/pages/homepage/homepage.component.scss
+++ b/src/app/components/pages/homepage/homepage.component.scss
@@ -1,3 +1,20 @@
 .homepage {
     margin-top: 30px;
+
+    .wrap-partecipant {
+        &:nth-child(odd) {
+            position: relative;
+            &::after {
+                content: 'vs';
+                font-size: 12px;
+                position: absolute;
+                right: -6px;
+                top: 0;
+                bottom: 0;
+                margin: auto;
+                height: 12px;
+                line-height: 1;
+            }
+        }
+    }
 }
